<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_card_view_color"
    tools:context=".AuthorizationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotip" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="@+id/cardView3"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="serif-monospace"
                android:text="@string/tv_info"
                android:textAlignment="center"
                android:textColor="@color/main_card_view_color"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/hint_et_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvInfo"
                app:layout_constraintStart_toStartOf="@+id/tvInfo"
                app:layout_constraintTop_toBottomOf="@+id/tvInfo" />

            <EditText
                android:id="@+id/etSurname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/hint_et_surname"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/etName"
                app:layout_constraintStart_toStartOf="@+id/etName"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <EditText
                android:id="@+id/etStudnetNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/hint_et_student_num"
                android:inputType="numberPassword"
                app:layout_constraintEnd_toEndOf="@+id/etSurname"
                app:layout_constraintStart_toStartOf="@+id/etSurname"
                app:layout_constraintTop_toBottomOf="@+id/etSurname" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/btn_sign_in"
                app:cornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="@+id/etStudnetNum"
                app:layout_constraintStart_toStartOf="@+id/etStudnetNum"
                app:layout_constraintTop_toBottomOf="@+id/etStudnetNum" />

            <TextView
                android:id="@+id/tvHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_help"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textStyle="italic"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
                app:layout_constraintStart_toStartOf="@+id/btnSignIn"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="687dp" />

</androidx.constraintlayout.widget.ConstraintLayout>